// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ItemListFilters correctly 1`] = `
<form>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      onChange={[Function]}
      placeholder="seacrh"
      type="text"
      value=""
    />
    <select
      className="form-control"
      onChange={[Function]}
      value="amount"
    >
      <option
        value="amount"
      >
        Price
      </option>
      <option
        value="sales"
      >
        Sales
      </option>
    </select>
  </div>
</form>
`;

exports[`should render ItemListFilters with alt data correctly 1`] = `
<form>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      onChange={[Function]}
      placeholder="seacrh"
      type="text"
      value="pants"
    />
    <select
      className="form-control"
      onChange={[Function]}
      value="amount"
    >
      <option
        value="amount"
      >
        Price
      </option>
      <option
        value="sales"
      >
        Sales
      </option>
    </select>
  </div>
</form>
`;
